[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Sounds.gd" type="Script" id=1]
[ext_resource path="res://Sounds/blipSelect.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/pickupCoin.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/click.wav" type="AudioStream" id=4]

[node name="Sounds" type="Node"]
script = ExtResource( 1 )

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="CoinPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="PressPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
